fragment_card_of_apartment.xml and CardOfApartmentFragment.kt (not finish)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="buy">Купить</string>
     <string name="rent">Арендовать</string>
     <string name="sell">Продать</string>
+    <string name="sing_up_for_viewing">ЗАПИСАТЬСЯ НА ПРОСМОТР</string>
 </resources>
